--- a/lib/gits_web/components/layouts/host.html.heex
+++ b/lib/gits_web/components/layouts/host.html.heex
@@ -13,15 +13,22 @@
         <.icon name="lucide--x" />
       </.button>
     </div>
-    <div class="grid p-2 text-sm font-medium text-zinc-400">
-      <%= for {label, icon, href, current, children} <- GitsWeb.HostComponents.host_navigation_items(@host, @socket.view, @live_action) do %>
+    <div class="grid gap-1 p-2 text-sm font-medium text-zinc-400">
+      <%= for {label, icon, href, current, children, flag} <- GitsWeb.HostComponents.host_navigation_items(@host, @socket.view, @live_action) do %>
         <%= if children == [] do %>
           <.link
             patch={href}
             aria-selected={"#{current}"}
             class="flex items-center gap-2 rounded-lg p-2 hover:bg-zinc-50/50 aria-selected:text-zinc-800"
           >
-            <.icon class={"#{icon} shrink-0"} /> <span>{label}</span>
+            <.icon class={"#{icon} shrink-0"} />
+            <span class="grow">{label}</span>
+            <span
+              :if={flag}
+              class="inline-flex h-5 min-w-5 items-center justify-center overflow-hidden rounded border-zinc-800 bg-zinc-50 text-xs text-zinc-600 ring-1 ring-zinc-100"
+            >
+              {flag}
+            </span>
           </.link>
         <% else %>
           <input
@@ -37,14 +44,20 @@
             <.icon class={icon} /> <span class="grow">{label}</span>
             <.icon class="shrink-0 transition-transform ri--arrow-right-s-line peer-checked/input:group-[]:rotate-90" />
           </label>
-          <div class="ml-4 hidden border-l px-1.5 transition-all peer-checked/input:grid">
+          <div class="ml-4 hidden border-l pl-1.5 transition-all peer-checked/input:grid">
             <.link
-              :for={{label, href, current} <- children}
+              :for={{label, href, current, flag} <- children}
               patch={href}
               aria-selected={"#{current}"}
-              class="rounded-lg p-2 hover:bg-zinc-50/50 aria-selected:text-zinc-800"
+              class="rounded-lg p-2 hover:bg-zinc-50/50 aria-selected:text-zinc-800 flex"
             >
-              <span>{label}</span>
+              <span class="grow">{label}</span>
+              <span
+                :if={flag}
+                class="inline-flex h-5 min-w-5 items-center justify-center overflow-hidden rounded border-zinc-800 bg-zinc-50 text-xs text-zinc-600 ring-1 ring-zinc-100"
+              >
+                {flag}
+              </span>
             </.link>
           </div>
         <% end %>
