--- a/lib/gits_web/live/host_live/events_templates/details_form.html.heex
+++ b/lib/gits_web/live/host_live/events_templates/details_form.html.heex
@@ -69,9 +69,9 @@
     </p>
   </div>
 
-  <.inputs_for :let={p} field={f[:poster]}>
-    <div class="col-span-full w-full grid gap-4 lg:grid-cols-[theme(space.80)_1fr]">
-      <div class="block col-span-full lg:col-span-1 aspect-[3/2] shrink-0 overflow-hidden rounded-lg border bg-zinc-50">
+  <div class="col-span-full w-full grid gap-4 lg:grid-cols-[theme(space.80)_1fr]">
+    <div class="block relative col-span-full lg:col-span-1 aspect-[3/2] shrink-0 overflow-hidden rounded-lg border bg-zinc-50">
+      <.inputs_for :let={p} field={f[:poster]}>
         <% entry = List.first(@uploads.poster.entries) %>
 
         <.live_img_preview :if={entry} entry={entry} class="size-full object-cover opacity-60" />
@@ -85,42 +85,41 @@
             if(p[:id].value != p.data.id, do: "opacity-60", else: "")
           ]}
         />
-      </div>
-      <div class="space-y-2">
-        <.live_file_input
-          upload={@uploads.poster}
-          class="block w-auto text-sm text-zinc-400 file:border file:border-zinc-200 file:text-zinc-400 file:font-medium file:border-solid file:px-2 file:py-1.5 file:rounded-lg file:bg-white"
-        />
-
-        <div>
-          <p class="text-sm text-zinc-600">
-            Please upload an image with the following specifications:
-          </p>
-
-          <div class="text-sm text-zinc-500">
-            <ul role="list" class="list-disc space-y-1 pl-5">
-              <li><strong>Aspect Ratio</strong>: 3:2</li>
-              <li><strong>Aspect Ratio</strong>: Maximum 2 MB</li>
-              <li><strong>Minimum Dimensions</strong>: 768 x 512 pixels</li>
-            </ul>
-          </div>
-
-          <span
-            :if={p[:id].value != p.data.id}
-            class="inline-flex mt-1 items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-inset ring-yellow-600/20"
-          >
-            Unsaved
-          </span>
-        </div>
-
-        <%= for entry <- @uploads.poster.entries do %>
-          <p :for={err <- upload_errors(@uploads.poster, entry)}>
-            <.error>{error_to_string(err)}</.error>
-          </p>
-        <% end %>
-      </div>
+        <span
+          :if={p[:id].value != p.data.id}
+          class="inline-flex mt-1 absolute top-2 right-2 items-center rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-800 ring-1 ring-inset ring-yellow-600/20"
+        >
+          Unsaved
+        </span>
+      </.inputs_for>
     </div>
-  </.inputs_for>
+    <div class="space-y-2">
+      <.live_file_input
+        upload={@uploads.poster}
+        class="block w-auto text-sm text-zinc-400 file:border file:border-zinc-200 file:text-zinc-400 file:font-medium file:border-solid file:px-2 file:py-1.5 file:rounded-lg file:bg-white"
+      />
+
+      <div>
+        <p class="text-sm text-zinc-600">
+          Please upload an image with the following specifications:
+        </p>
+
+        <div class="text-sm text-zinc-500">
+          <ul role="list" class="list-disc space-y-1 pl-5">
+            <li><strong>Aspect Ratio</strong>: 3:2</li>
+            <li><strong>Aspect Ratio</strong>: Maximum 2 MB</li>
+            <li><strong>Minimum Dimensions</strong>: 768 x 512 pixels</li>
+          </ul>
+        </div>
+      </div>
+
+      <%= for entry <- @uploads.poster.entries do %>
+        <p :for={err <- upload_errors(@uploads.poster, entry)}>
+          <.error>{error_to_string(err)}</.error>
+        </p>
+      <% end %>
+    </div>
+  </div>
 
   <div class="col-span-full">
     <h2 class="text-base/7 font-semibold text-gray-900">Location</h2>
@@ -151,7 +150,6 @@
             variant={:outline}
             size={:box}
             phx-click={JS.push("pre_choose_venue") |> show_modal("choose_venue")}
-            phx-target={@myself}
           >
             <.icon name="lucide--pen-line" />
           </.button>
