--- a/lib/gits_web/live/host_live/events_templates/tickets_warn_payout_details.html.heex
+++ b/lib/gits_web/live/host_live/events_templates/tickets_warn_payout_details.html.heex
@@ -3,12 +3,12 @@
     <.icon class="ri--alert-line text-sm mt-0.5 text-amber-500 shrink-0" />
     <div class="flex grow items-start justify-between gap-3">
       <p class="text-sm">Please setup payout details to accept payments for tickets.</p>
-      <a
-        href="#"
+      <.link
+        patch={@billing_settings_path}
         class="group inline-flex items-center gap-1 whitespace-nowrap text-sm font-medium"
       >
         Setup<.icon class="mt-0.5 ri--arrow-right-line" />
-      </a>
+      </.link>
     </div>
   </div>
 </div>
