feat: add currently_happening? calculation and ui updates
introduce `currently_happening?` calculation to determine if an event
is ongoing. update event display in the dashboard to show a "live"
indicator for ongoing events. refactor button in the not found page
and rename "attendance" to "admissions" in the sidebar for clarity.

--- a/lib/gits_web/components/layouts/not_found.html.heex
+++ b/lib/gits_web/components/layouts/not_found.html.heex
@@ -5,13 +5,10 @@
     Sorry, we couldn't find the page you're looking for.
   </p>
   <div class="flex gap-2 items-center">
-    <button
-      phx-click={JS.navigate("/")}
-      class="h-9 gap-1 hover:bg-zinc-100 border rounded-lg inline-flex items-center text-zinc-950 px-4 text-sm"
-    >
-      <.icon name="i-lucide-arrow-left" />
-      <span class="font-semibold">Go to home</span>
-    </button>
+    <.button variant={:outline} href="/">
+      <.icon class="ri--home-2-line" />
+      <span>Go to home</span>
+    </.button>
   </div>
 </div>
 <.footer />
