--- a/lib/gits_web/live/host_live/events_templates/event_sidebar.html.heex
+++ b/lib/gits_web/live/host_live/events_templates/event_sidebar.html.heex
@@ -6,7 +6,7 @@
           {"Dashboard", :dashboard, nil},
           {"Details", :details, if(@event_has_issues?, do: :warn, else: nil)},
           {"Tickets", :tickets, if(@paid_tickets_issue?, do: :warn, else: @tickets_flag)},
-          {"Attendance", :attendance, nil},
+          {"Admissions", :admissions, nil},
           {"Settings", :settings, nil}
         ]
       }
