--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -21,7 +21,7 @@
     Start planning and hosting your events with us today.
   </p>
   <div class="flex gap-8 font-medium">
-    <.button size={:lg} variant={:accent} href={~p"/host-with-us"}>
+    <.button size={:lg} variant={:accent} href={~p"/hosts/get-started"}>
       Host with us
     </.button>
   </div>
