--- a/lib/gits_web/live/host_live/events_templates/details_form.html.heex
+++ b/lib/gits_web/live/host_live/events_templates/details_form.html.heex
@@ -169,8 +169,8 @@
   </div>
 
   <div class="col-span-full flex gap-2">
-    <.button size={:box}>
-      <.icon name="lucide--save" />
+    <.button variant={:solid}>
+      <.icon name="ri--save-line" />
       <span>Save</span>
     </.button>
   </div>
