--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -1,11 +1,3 @@
-<.live_component
-  :if={@live_action == :index}
-  module={Index}
-  id="api"
-  current_user={@current_user}
-  host={@host}
-/>
-
 <%= if @live_action == :index do %>
   <div class="grid max-w-screen-md w-full gap-8 p-2">
     <div class="grid p-4 border rounded-lg gap-6">
@@ -108,76 +100,42 @@
   </div>
 <% end %>
 
-<%= if @live_action == :general do %>
-  <div class="p-2">
-    <h2 class="text-xl font-semibold">General</h2>
-    <p class="mt-1 text-sm leading-6 text-gray-600">
-      <!-- This displayed publicly. -->
-    </p>
-
-    <form id="host-form" phx-submit="upload" phx-change="validate">
-      <div class="mt-8 grid grid-cols-[auto_1fr] items-center gap-1 gap-x-4">
-        <span class="col-span-full w-full text-sm font-medium">Upload your logo</span>
-        <div class="size-24 overflow-hidden rounded-xl bg-zinc-200">
-          <%= if Enum.any?(@uploads.logo.entries) do %>
-            <.live_img_preview
-              entry={@uploads.logo.entries |> List.first()}
-              class="h-full w-full object-cover opacity-50"
-            />
-          <% else %>
-            <img
-              src={Gits.Bucket.get_image_url(@host.logo)}
-              alt={@host.name}
-              class="h-full w-full object-cover"
-            />
-          <% end %>
-        </div>
-        <div class="inline-grid gap-4">
-          <label class="inline-flex">
-            <span class="sr-only">Choose logo</span>
-
-            <.live_file_input
-              upload={@uploads.logo}
-              class="w-full text-sm font-medium file:mr-4 file:h-9 file:rounded-lg file:border file:border-solid file:border-zinc-300 file:bg-white file:px-4 file:py-2 hover:file:bg-zinc-50"
-            />
-          </label>
-          <span class="text-sm text-zinc-500">
-            .png, .jpeg, .gif files up to 2MB. Recommended size is 256x256
-          </span>
-        </div>
-        <p :for={err <- upload_errors(@uploads.logo)} class="alert alert-danger">
-          {error_to_string(err)}
-        </p>
-      </div>
-
-      <.button variant={:subtle} class="mt-8">
-        Upload
-      </.button>
-    </form>
-
-    <.form
-      :let={f}
-      for={@form}
-      class="grid gap-4 mt-8 grid-cols-2 max-w-screen-sm"
-      phx-change="validate"
-      phx-submit="submit"
-    >
-      <.input field={f[:name]} label="Name" type="text" class="col-span-full" />
-      <div class="flex col-span-full gap-6">
-        <.button disabled={not @form.changed? or not @form.valid?}><span>Save</span></.button>
-        <.button variant={:ghost} type="button" phx-click={JS.dispatch("gits:go_back")}>
-          <span>Back</span>
-        </.button>
-      </div>
-    </.form>
-  </div>
-<% end %>
-
 <.live_component
   :if={@live_action == :api}
   module={Api}
   id="api"
   current_user={@current_user}
   host={@host}
+>
+  <:header>
+    <.host_header current_user={@current_user} handle={@host.handle} host_name={@host.name}>
+      <.host_breadcrumb_button text="Settings" href={~p"/hosts/#{@host.handle}/settings"} />
+      <span class="text-xs font-semibold text-zinc-400">/</span>
+      <.host_breadcrumb_label text="General" />
+    </.host_header>
+  </:header>
+</.live_component>
+
+<.live_component
+  :if={@live_action == :general}
+  module={General}
+  id="general"
+  current_user={@current_user}
+  host={@host}
+>
+  <:header>
+    <.host_header current_user={@current_user} handle={@host.handle} host_name={@host.name}>
+      <.host_breadcrumb_button text="Settings" href={~p"/hosts/#{@host.handle}/settings"} />
+      <span class="text-xs font-semibold text-zinc-400">/</span>
+      <.host_breadcrumb_label text="General" />
+    </.host_header>
+  </:header>
+</.live_component>
+
+<.live_component
+  :if={@live_action == :billing}
+  module={Billing}
+  id="billing"
+  current_user={@current_user}
+  host={@host}
 />
-<.live_component module={Billing} id="billing" current_user={@current_user} host={@host} />
