feat: enhance button component and remove unused files
refactor `button` function in `gitsweb.corecomponents` to improve
link handling and size/variant class assignment. remove `addticket`
and `viewevent` modules as they are no longer needed. introduce
new templates for admissions management in events. update
navigation and button components for consistency.

--- a/lib/gits_web/live/host_live/events.html.heex
+++ b/lib/gits_web/live/host_live/events.html.heex
@@ -77,6 +77,11 @@
             on_submit="submit_tickets_form"
           />
         <% end %>
+        <%= if @live_action == :admissions do %>
+          <.admissions_header event_state={@event.state} can_publish?={@can_publish?} />
+          <.admissions_overview event_state={@event.state} can_publish?={@can_publish?} />
+        <% end %>
+
         <%= if @live_action == :settings do %>
           <.settings_content webhooks={@event.webhooks} />
           <.button
