--- a/lib/gits_web/live/host_live/settings/general.html.heex
+++ b/lib/gits_web/live/host_live/settings/general.html.heex
@@ -1,5 +1,5 @@
 <div class="grid gap-4">
-  {render_slot(@header)}
+  {render_slot(@inner_block)}
   <div class="lg:p-2 p-4 grid gap-8">
     <div class="flex w-full">
       <h2 class="text-4xl grow font-medium col-span-full">General</h2>
