--- a/lib/gits_web/live/pricing_live.html.heex
+++ b/lib/gits_web/live/pricing_live.html.heex
@@ -180,7 +180,7 @@
       Ready to dive in?<br /><span class="text-brand-600">Start your journey with us today.</span>
     </h2>
     <div class="flex items-center gap-x-6 lg:shrink-0">
-      <.button variant={:accent} size={:md} href={~p"/hosts/get-started"}>
+      <.button variant={:accent} size={:md} navigate={~p"/hosts/get-started"}>
         <span>Get Started</span>
       </.button>
     </div>
