--- a/lib/gits_web/live/host_live/settings/billing.html.heex
+++ b/lib/gits_web/live/host_live/settings/billing.html.heex
@@ -1,10 +1,5 @@
 <div class="grid gap-4">
-  <.host_header current_user={@current_user} handle={@host.handle} host_name={@host.name}>
-    <.host_breadcrumb_button text="Settings" href={~p"/hosts/#{@host.handle}/settings"} />
-    <span class="text-xs font-semibold text-zinc-400">/</span>
-    <.host_breadcrumb_label text="Billing & Payouts" />
-  </.host_header>
-
+  {render_slot(@inner_block)}
   <div class="lg:p-2 p-4 grid gap-8">
     <div class="flex w-full">
       <h2 class="text-4xl grow font-medium col-span-full">Billing & Payouts</h2>
