--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -33,8 +33,8 @@
 
     <div class="grid gap-4">
       <div class="flex items-start gap-3">
-        <.icon name="ri--calendar-line" class="shrink-0 text-zinc-500" />
-        <div class="grid text-sm font-medium text-zinc-700">
+        <.icon class="shrink-0 text-lg text-zinc-500 ri--calendar-line" />
+        <div class="grid text-sm text-zinc-700">
           <span class="">
             Starts {Calendar.strftime(@event.starts_at, " %H:%M, %A %d %b %Y")}
           </span>
@@ -45,7 +45,7 @@
       </div>
 
       <div class="flex items-start gap-3">
-        <.icon name="ri--map-pin-line" class="shrink-0 text-zinc-500" />
+        <.icon name="ri--map-pin-line" class="shrink-0 text-lg text-zinc-500" />
         <div class="grid text-sm">
           <%= if @event.location_is_private or is_nil(@event.venue) do %>
             <span class="font-medium">Private Location</span>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="flex items-start gap-3">
-        <.icon name="ri--megaphone-line" class="shrink-0 text-zinc-500" />
+        <.icon name="ri--megaphone-line" class="shrink-0 text-lg text-zinc-500" />
         <div class="flex gap-1.5 text-sm">
           <span class="text-zinc-600">hosted by</span>
           <span class="font-medium">{@event.host.name}</span>
@@ -68,7 +68,7 @@
       </div>
 
       <div class="flex items-start gap-3">
-        <.icon name="ri--hand-coin-line" class="shrink-0 text-zinc-500" />
+        <.icon name="ri--hand-coin-line" class="shrink-0 text-lg text-zinc-500" />
         <div class="space-y-1 text-sm">
           <span class="text-zinc-500">
             You can <span class="font-medium text-zinc-800">get a refund</span> if:
