--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -45,25 +45,50 @@
           class="size-full scale-125"
         />
       </.link>
-      <h3 class="text-lg/5 font-semibold text-zinc-900">{event.name}</h3>
-      <div class="space-y-1 truncate">
-        <div class="flex items-center justify-between gap-2 font-medium text-zinc-950">
-          <span class="inline-flex shrink-0 items-center text-sm/5 gap-2">
-            <.icon name="lucide--calendar-range" class="text-zinc-400" />
-            {Calendar.strftime(event.starts_at, "%a, %d %b, %I:%m %p")}
+      <div class="space-y-2 px-2">
+        <h3 class="text-xl/5 font-semibold text-zinc-900">{event.name}</h3>
+        <div class="flex flex-wrap gap-2">
+          <span class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200">
+            <svg class="h-1.5 w-1.5 fill-zinc-900" viewBox="0 0 6 6" aria-hidden="true">
+              <circle cx="3" cy="3" r="3" />
+            </svg>
+            {Gits.Storefront.EventCategory.description(event.category)}
           </span>
-        </div>
-        <span class="inline-flex items-center gap-2 truncate text-sm/5">
-          <.icon name="lucide--map-pin" class="text-zinc-400" />
-          {if(event.location_is_private, do: "Private", else: event.venue.name)}
-        </span>
-        <div class="flex items-center gap-2">
-          <span class="shrink-0 text-sm/4 text-zinc-500">{event.host.name}</span>
-          <span>&bull;</span>
+
           <span class="inline-flex items-center gap-x-1.5 rounded-md px-2 py-1 text-xs font-medium text-gray-900 ring-1 ring-inset ring-gray-200">
             R {event.minimum_ticket_price |> Gits.Currency.format()}
             <span :if={event.ticket_prices_vary?}>&plus;</span>
           </span>
+        </div>
+
+        <div class="grid gap-2">
+          <div class="flex items-start gap-3">
+            <.icon class="shrink-0 text-lg text-zinc-500 ri--calendar-line" />
+            <div class="flex gap-2 text-sm text-zinc-700">
+              <span class="">
+                {Calendar.strftime(event.starts_at, "%a, %d %b, %I:%m %p")}
+              </span>
+              &dash;
+              <span class="">
+                {Calendar.strftime(event.ends_at, "%a, %d %b, %I:%m %p")}
+              </span>
+            </div>
+          </div>
+
+          <div class="flex items-start gap-3">
+            <.icon name="ri--map-pin-line" class="shrink-0 text-lg text-zinc-500" />
+            <div class="grid text-sm">
+              <%= if event.location_is_private or is_nil(event.venue) do %>
+                <span class="font-medium">Private Location</span>
+                <span class="text-zinc-600">
+                  Details will be shared with ticket holders
+                </span>
+              <% else %>
+                <span class="font-medium">{event.venue.name}</span>
+                <span class="text-zinc-600">{event.venue.address}</span>
+              <% end %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
